--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,36 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: verdana;
+  font-size: 14px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainContainer {
+    height: auto;
+    margin: 0 auto;
+    padding: 10px;
+    clear: both;
+}
+
+.mainTitle {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 10px 10px 10px 10px;
+}
+
+.summaryContainer{
+  width: 200px;
+  height: 50px;
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f4f4f4;
+  margin-right: 10px;
+  padding: 5px;
+  text-align: center;
+  line-height: 25px;
+}
+
+input[type=text] {
+  width: 300pt;
+  height: 30pt;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
